k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sopes1-workshop-ingress-node
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
  namespace: sopes1-workshop
spec:
  rules:
  - host: <Ip_Ingress_Controller>.nip.io #IP ingress controller (nginx)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-node
            port:
              number: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sopes1-workshop-ingress-python
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "50"
  namespace: sopes1-workshop
spec:
  rules:
  - host: <Ip_Ingress_Controller>.nip.io #IP ingress controller (nginx)
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-python
            port:
              number: 3000
